shipquick-gitops/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipquick-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipquick-backend
  template:
    metadata:
      labels:
        app: shipquick-backend
    spec:
      containers:
      - name: backend
        image: 575126609591.dkr.ecr.ap-south-1.amazonaws.com/shipquick-backend:dev
        ports:
        - containerPort: 5000
