shipquick-gitops/k8s/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shipquick-db
spec:
  serviceName: shipquick-db-service
  replicas: 1
  selector:
    matchLabels:
      app: shipquick-db
  template:
    metadata:
      labels:
        app: shipquick-db
    spec:
      containers:
      - name: mysql
        image: mysql:8
        ports:
        - containerPort: 3306
