shipquick-gitops/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipquick-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipquick-frontend
  template:
    metadata:
      labels:
        app: shipquick-frontend
    spec:
      containers:
      - name: frontend
        image: 575126609591.dkr.ecr.ap-south-1.amazonaws.com/shipquick-frontend:dev
        ports:
        - containerPort: 80
