shipquick-gitops/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipquick-backend-service
spec:
  selector:
    app: shipquick-backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
