shipquick-gitops/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipquick-db-service
spec:
  selector:
    app: shipquick-db
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
