shipquick-gitops/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipquick-frontend-service
spec:
  selector:
    app: shipquick-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
