shipquick-gitops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipquick-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shipquick-frontend-service
            port:
              number: 80
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: shipquick-backend-service
            port:
              number: 5000
      - path: /tracking
        pathType: Prefix
        backend:
          service:
            name: shipquick-backend-service
            port:
              number: 5000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: shipquick-backend-service
            port:
              number: 5000
